<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="@dimen/_8sdp"
        tools:background="@color/colorPrimary"
        tools:theme="@style/Theme.HealthCare">

        <TextView
            style="@style/VitaminBodyTextStyle"
            android:text="@string/vitamins_daily_exposure" />

        <RadioGroup
            android:id="@+id/rg_dailyExposure"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.radiobutton.MaterialRadioButton
                android:id="@+id/rb_exposure_yes"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/shared_yes"
                app:buttonTint="@color/white" />

            <com.google.android.material.radiobutton.MaterialRadioButton
                android:id="@+id/rb_exposure_no"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/shared_no"
                app:buttonTint="@color/white" />
        </RadioGroup>


        <TextView
            style="@style/VitaminBodyTextStyle"
            android:layout_marginTop="@dimen/_8sdp"
            android:text="@string/vitamins_current_smoke" />

        <RadioGroup
            android:id="@+id/rg_smoke"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.radiobutton.MaterialRadioButton
                android:id="@+id/rb_smoke_yes"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/shared_yes"
                app:buttonTint="@color/white" />

            <com.google.android.material.radiobutton.MaterialRadioButton
                android:id="@+id/rb_smoke_no"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/shared_no"
                app:buttonTint="@color/white" />
        </RadioGroup>

        <TextView
            style="@style/VitaminBodyTextStyle"
            android:layout_marginTop="@dimen/_8sdp"
            android:text="@string/vitamins_alcoholic" />

        <RadioGroup
            android:id="@+id/rg_alcoholic"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.radiobutton.MaterialRadioButton
                android:id="@+id/rb_alcoholic_first"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/vitamins_alcohol_first_level"
                app:buttonTint="@color/white" />

            <com.google.android.material.radiobutton.MaterialRadioButton
                android:id="@+id/rb_alcoholic_second"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/vitamins_alcohol_second_level"
                app:buttonTint="@color/white" />

            <com.google.android.material.radiobutton.MaterialRadioButton
                android:id="@+id/rb_alcoholic_third"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/vitamins_alcohol_third_level"
                app:buttonTint="@color/white" />
        </RadioGroup>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_personalized"
            style="@style/AppButton"
            android:layout_width="match_parent"
            android:layout_height="@dimen/btnHeight"
            android:layout_marginTop="@dimen/_12sdp"
            android:text="@string/vitamins_my_personalize" />
    </LinearLayout>
</androidx.core.widget.NestedScrollView>